US1314 - New CSS for Training Plan libraries to match comp, training plan title text is now vertically centered for both one line and two line titles. Also fixed text jumping that occured when any library pane was closed.

--- a/app/scss/_library.scss
+++ b/app/scss/_library.scss
@@ -281,11 +281,14 @@ $troughIconSpriteRetinaURL: url(../../assets/images/sprite-icons-trough@2x.png);
         border-left: 3px solid $TPBlue;
 
         .libraryNavigation {
+            width:241px;
+
             @include labels($fontFamilyRegular, $fontSizeMedium, $TPBlue, normal);
             
             label {
-                display: inline-block;
                 margin: 2px 15px 0 2px;
+                float:left;
+                text-align:left;
             }
 
             @include headerButtons(0px, 38px, $fontSizeMedium);
@@ -353,6 +356,7 @@ $troughIconSpriteRetinaURL: url(../../assets/images/sprite-icons-trough@2x.png);
             color: $TPGrey3;
             cursor: default;
             font-size: $fontSizeSmall;
+            text-align:left;
             
             p {
                 margin:5px 7px 15px 9px;
@@ -382,6 +386,12 @@ $troughIconSpriteRetinaURL: url(../../assets/images/sprite-icons-trough@2x.png);
         margin-left: 0px;
     }
 }
+
+
+.exercisesContainer {
+    float:left;
+}
+
 
 #exerciseLibraryAddItemView
 {
@@ -418,6 +428,8 @@ $troughIconSpriteRetinaURL: url(../../assets/images/sprite-icons-trough@2x.png);
                 font-size: $fontSizeLarge;
                 margin-right: 4px;
                 margin-left: 1px;
+
+                text-align:left;
             }
         }
 
@@ -425,6 +437,7 @@ $troughIconSpriteRetinaURL: url(../../assets/images/sprite-icons-trough@2x.png);
         {
             label
             {
+                text-align:left;
                 color: $TPGrey3;
             }
         }
@@ -442,42 +455,62 @@ $troughIconSpriteRetinaURL: url(../../assets/images/sprite-icons-trough@2x.png);
         {
             
             height: 50px;
-            padding: 5px;
+            padding: 3px;
+            
             white-space: normal;
             line-height: 1.5em;
 
-            .trainingPlansIcon
-            {
-                background: $TPGrey1 $troughIconSpriteURL no-repeat 0 0;
-                background-color: $TPGrey2;
-                width: 24px;
-                height: 24px;
-                float: left;
+            .planIconTitle {
+                margin-bottom:4px;
+
+                .trainingPlansIcon {
+                    background: $TPGrey1 $troughIconSpriteURL no-repeat 0 0;
+                    background-color: $TPGrey2;
+                    width: 24px;
+                    height: 24px;
+                    float: left;
+                }
+                
+                .planTitleContain {
+                    height:24px;
+
+                    // For vertical centering
+                    display: table; 
+
+                    h3 {
+                        font-size: $fontSizeSmaller;
+                        font-family: $fontFamilyRegular;
+                        font-weight:normal;
+                        color:$TPGrey4;
+                        line-height:normal;
+                        padding-left:5px;
+
+                        //prevents text from jumping to right align when closing libary
+                        text-align:left;
+
+                        // for vertical centering
+                        display: table-cell; 
+                        vertical-align: middle;
+                    }
+                }
             }
 
-            .title
-            {
-                font-family: $fontFamilyHeavy;
-                font-size: $fontSizeSmall;
-                color: $TPGrey8;
-                overflow: hidden;
-                margin-left: 30px;
-                max-height: 26px;
-                height: 26px;
-                line-height: 12px;
-                text-overflow: ellipsis;
-                margin-bottom: 2px;
-            }
+            // Author and Duration
+            p {
+                font-size: $fontSizeSmaller;
+                color:$TPGrey10;
+                margin:0 0 0 3px;
+                padding:0;
 
-            .author
-            {
-                height: 15px;
-                max-width: 238px;
+                max-width:228px;
                 white-space: nowrap;
                 overflow: hidden;
                 text-overflow: ellipsis;
-                margin-left: 5px;
+
+                // prevents jump when library is closed
+                text-align:left;
             }
+
         }
     }
 
